# fiducial-playground-pybind

./: .gitignore  CMakeLists.txt  Readme.md
app/: CMakeLists.txt
app/src/: main.cpp
python-aruco-binding/: aruco_module.pyi  requirements.txt  setup.py  test.py
python-aruco-binding/aruco/: aruco.cpp  aruco_nano.h  mat_type_caster.h  span_type_caster.h
